objects/IND_PM_Notification_Interest_Tag__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>hold the data for the PM to be notified when certain interest tags are created.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>email address of the person that wants to be notified</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <description>enter the GPL names for which the user requires notification. Multiple GPL separated by comma.</description>
        <inlineHelpText>enter the GPL names for which the user requires notification. Multiple GPL separated by comma.</inlineHelpText>
        <label>GPL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <description>Enter the region of the interest tag for which the user needs to be notified. Multiple regions separated by comma. 
Available values are: North America, EMEA, Greater China, India, Japan, Korea, Rest of APAC, Global</description>
        <inlineHelpText>Multiple regions separated by comma. 
Available values are: Americas, EMEA (excl. India), China (AP Central), India, AP South, AP North,Australia / New Zealand, South America, Global</inlineHelpText>
        <label>Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>holds the user ID of the person who needs to be notified</description>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IND PM Notification Interest Tag</label>
</CustomObject>